# cmake-demo

./: CMakeLists.txt  config.h.in  main.cc
math/: CMakeLists.txt
